--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "require": {
         "php": ">=5.6.0",
         "topthink/framework": "5.1.*",
-        "overtrue/wechat": "~4.1"
+        "overtrue/wechat": "~4.1",
+        "topthink/think-swoole": "^2.0"
     },
     "autoload": {
         "psr-4": {
